--- a/extraction/based_on_word_vec_v_0.2
+++ b/extraction/based_on_word_vec_v_0.2
@@ -1,3 +1,11 @@
+# author: 千山漫雪空
+# time: 2018.8.7
+# encoding:utf-8
+
+# ---------------------------------------
+#           摘要提取（向量实现）
+# ---------------------------------------
+
 def get_distance(np_sentence_vec, np_article_vec):
     A = 0
     B = 0
